[tool.poetry]
name = "flow-visualization"
version = "0.1.0"
description = ""
authors = ["Shuang Wu <seanwu1105@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
vtk = "^9.2.6"


[tool.poetry.group.dev.dependencies]
pylint = "^2.16.3"
black = "^23.1.0"
pre-commit = "^3.1.1"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
